@@ -1,3 +1,7 @@
+2012-11-04  Borut Razem  <borutr@users.sourceforge.net>
+  * gpasm/evaluate.c, gpasm/directive.c, gpasm/gperror.c:
+    fixed bug #196 - code relocation
+  
 2012-11-03  Borut Razem  <borutr@users.sourceforge.net>
   * gpasm/directive.c, gpasm/lst.c, gpasm/lst.h, gpasm/gperror.c,
     gpasm/gpasm.h.in: implemented LIST directive c=xxx option
